addressed review comments about is_JavaThread_current and @enablePreview tag